# insightforge

Ganesh/backend/: .env.example  docker-compose.yml  pyproject.toml
Ganesh/backend/alembic/versions/: 20250602_0001_initial_auth_rbac.py  e37e59ae7e96_create_dataset_tables.py
Ganesh/backend/app/: main.py
Ganesh/backend/app/analytics/: router.py
Ganesh/backend/app/api/: deps.py
Ganesh/backend/app/audit/: __init__.py
Ganesh/backend/app/auth/: router.py  seed.py
Ganesh/backend/app/core/: container.py  exceptions.py  logging.py  security.py
Ganesh/backend/app/dashboards/: router.py
Ganesh/backend/app/database/: __init__.py  mixins.py
Ganesh/backend/app/datasets/: service.py
Ganesh/backend/app/entities/: __init__.py
Ganesh/backend/app/mappers/: dataset_mapper.py  user_mapper.py
Ganesh/backend/app/ml/: router.py
Ganesh/backend/app/models/: __init__.py  associations.py  dataset.py
Ganesh/backend/app/notifications/: router.py
Ganesh/backend/app/reports/: router.py
Ganesh/backend/app/repositories/: base.py  dataset_repository.py  role_repository.py
Ganesh/backend/app/schemas/: dashboard.py
Ganesh/backend/app/services/: __init__.py  email_service.py  user_service.py
Ganesh/backend/tests/: conftest.py  test_dashboards.py  test_datasets.py  test_health.py
Ganesh/backend/uploads/: 4e24b69d-34bd-4921-83fb-50f8d7d47de3.csv  64f9c099-8677-4d04-883b-0b6bbaec4d0e.csv  a44a5aec-d114-4118-b587-5a59d99bfb83.csv
Ganesh/docs/: DATABASE_DESIGN.md
Ganesh/frontend/: index.html  package.json  tailwind.config.js  (+1 more)
insightforge/: .gitignore  README.md
(+144 files in other folders)
